adding photo html seperatly

--- a/example.html
+++ b/example.html
@@ -1,26 +1,1 @@
-<div id="pic_test" class="color-shape  red"></div>
-<div class="color-shape small round blue">
-    <img src="./photos/אאורבך 8-בר-הופמן-14_8840.jpg">
-</div>
-<div class="color-shape  yellow"><img src="./photos/אאורבך 8-בר-הופמן-14_8840.jpg"></div>
-<div class="color-shape red"><img src="./photos/אאורבך 8-בר-הופמן-14_8840.jpg"></div>
-<div class="color-shape  blue"><img src="./photos/אאורבך 8-בר-הופמן-14_8840.jpg"></div>
-<div class="color-shape yellow"><img src="./photos/אאורבך 8-בר-הופמן-14_8840.jpg"></div>
-<div class="color-shape  red"><img src="./photos/אאורבך 8-בר-הופמן-14_8840.jpg"></div>
-<div class="color-shape  blue "><img src="./photos/אאורבך 8-בר-הופמן-14_8840.jpg"></div>
-<div class="color-shape  yellow "><img src="./photos/אאורבך 8-בר-הופמן-14_8840.jpg"></div>
-<div class="color-shape  red "><img src="./photos/אאורבך 8-בר-הופמן-14_8840.jpg"></div>
-<div class="color-shape  blue "><img src="./photos/אאורבך 8-בר-הופמן-14_8840.jpg"></div>
-<div class="color-shape wide square yellow "><img src="./photos/אאורבך 8-בר-הופמן-14_8840.jpg"></div>
-<div class="color-shape big round red "><img src="./photos/אאורבך 8-בר-הופמן-14_8840.jpg"></div>
-<div class="color-shape big round blue "><img src="./photos/אאורבך 8-בר-הופמן-14_8840.jpg"></div>
-<div class="color-shape big round yellow "><img src="./photos/אאורבך 8-בר-הופמן-14_8840.jpg"></div>
-<div class="color-shape big square red "><img src="./photos/אאורבך 8-בר-הופמן-14_8840.jpg"></div>
-<div class="color-shape big square blue "><img src="./photos/אאורבך 8-בר-הופמן-14_8840.jpg"></div>
-<div class="color-shape big square yellow "><img src="./photos/אאורבך 8-בר-הופמן-14_8840.jpg"></div>
-<div class="color-shape tall round red "><img src="./photos/אאורבך 8-בר-הופמן-14_8840.jpg"></div>
-<div class="color-shape tall round blue "><img src="./photos/אאורבך 8-בר-הופמן-14_8840.jpg"></div>
-<div class="color-shape tall round yellow "><img src="./photos/אאורבך 8-בר-הופמן-14_8840.jpg"></div>
-<div class="color-shape tall square red "><img src="./photos/אאורבך 8-בר-הופמן-14_8840.jpg"></div>
-<div class="color-shape tall square blue "><img src="./photos/אאורבך 8-בר-הופמן-14_8840.jpg"></div>
-<div class="color-shape tall square yellow "><img src="./photos/אאורבך 8-בר-הופמן-14_8840.jpg"></div>
+<h1>HELLO IS THERE ANYBODY OUTTHERE?</h1>
