--- a/output.html
+++ b/output.html
@@ -109,7 +109,7 @@
                Shapira
               </button>
                                                     <button class="button" data-filter=".12">
-               Tel-Kabirת Neva Ofer, Jaffa B
+               Tel-Kabir, Neva Ofer, Jaffa B
               </button>
                                                 </div>
                                             </div>
