--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
                 <li>
                     <a href="#0">Data stories</a>
                 </li>
-                <li><a href="#0">About</a></li>
-                <li><a href="#0">Contact</a></li>
+                <li><a href="./about.html">About</a></li>
             </ul>
         </nav>
         <!-- End navigation menu-->
