--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 
         <nav class="main-navigation">
             <ul>
-                <li><a href="./index.html">Machine</a></li>
+                <li><a href="./output.html">Machine</a></li>
                 <li>
                     <a href="#0">Data stories</a>
                 </li>
