--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <nav class="main-navigation">
             <ul>
-                <li><a href="./index.html">Machine</a></li>
+                <li><a href="./output.html">Machine</a></li>
                 <li>
                     <a href="#0">Data stories</a>
                 </li>
@@ -201,17 +201,17 @@
                                             </li>
                                         </ul>
                                         <h4>
-                                            Professionals
+                                            Control
                                         </h4>
                                         <ul>
                                             <li>
                                                 <a href="#">
-             Success 1.0
+             reset
             </a>
                                             </li>
                                             <li>
                                                 <a href="#">
-             Moneymaker
+             extend options
             </a>
                                             </li>
                                         </ul>
@@ -230,21 +230,21 @@
                             <div class="cbp-hrsub-inner">
                                 <div>
                                     <h4>
-                                        Education &amp; Learning
+                                        Test
                                     </h4>
                                     <ul>
                                         <div class="button-group" id="sorts">
                                             <button class="button is-checked" data-sort-by="original-order">
              original order
             </button>
-                                            <button class="button" data-sort-by="name">
-             name
+                                            <button class="button" data-sort-by="id">
+             id
             </button>
-                                            <button class="button" data-sort-by="symbol">
-             symbol
+                                            <button class="button" data-sort-by="n_bicycle_parking">
+                                                n_bicycle_parking
             </button>
-                                            <button class="button" data-sort-by="number">
-             number
+                                            <button class="button" data-sort-by="n_parks">
+                                                n_parks
             </button>
                                             <button class="button" data-sort-by="weight">
              weight
@@ -255,94 +255,8 @@
                                         </div>
                                     </ul>
                                     <h4>
-                                        Professionals
+                                        else
                                     </h4>
-                                    <ul>
-                                        <li>
-                                            <a href="#">
-             Success 1.0
-            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#">
-             Moneymaker
-            </a>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <div>
-                                    <h4>
-                                        Entertainment
-                                    </h4>
-                                    <ul>
-                                        <li>
-                                            <a href="#">
-             Gadget Finder
-            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#">
-             Green Tree Express
-            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#">
-             Green Tree Pro
-            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#">
-             Holy Cannoli
-            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#">
-             Wobbler 3.0
-            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#">
-             Coolkid
-            </a>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <div>
-                                    <h4>
-                                        Games
-                                    </h4>
-                                    <ul>
-                                        <li>
-                                            <a href="#">
-             Catch the Bullet
-            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#">
-             Snoopydoo
-            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#">
-             Fallen Angel
-            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#">
-             Sui Maker
-            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#">
-             Wave Master
-            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#">
-             Golf Pro
-            </a>
-                                        </li>
-                                    </ul>
                                 </div>
                             </div>
                             <!-- /cbp-hrsub-inner -->
