--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <li><a href="./about.html">About</a></li>
         </ul>
     </nav>
-    <!-- End navigation menu-->
+    <!-- End burger navigation menu-->
 
     <!-- 
         <div data-barba="container">
@@ -78,7 +78,7 @@
         <!-- KEEP HEADER BETWEEN PAGES -->
 
 
-
+        <!--
 
         <span>
      Jaffa
@@ -86,6 +86,9 @@
         <h1>
             Machine
         </h1>
+
+        -->
+
         <!--
         <nav>
             <a class="icon-arrow-left" data-info="previous Blueprint" href="http://tympanus.net/Blueprints/FullWidthImageSlider/">
@@ -286,17 +289,14 @@
             </ul>
         </nav>
 
-
-        <!--
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-     -->
-
         <script src="js/cbpHorizontalMenu.min.js"></script>
         <script>
             $(function() {
                 cbpHorizontalMenu.init();
             });
         </script>
+
+        <!-- END Of filter drop down menus-->
 
         <!-- Start of grid items-->
         <div class="grid">
