--- a/output.html
+++ b/output.html
@@ -27,8 +27,16 @@
     <!-- load isotop -->
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js ">
     </script>
+    <!-- load barbajs -->
+    <script src="./js/app.js">
+    </script>
+    <link href="./css/barba-trasn.css" rel="stylesheet" />
+
+
+
     </meta>
     </meta>
+
 </head>
 <!--
 
