--- a/index.html
+++ b/index.html
@@ -98,6 +98,11 @@
             <nav class="cbp-hrmenu" id="cbp-hrmenu">
                 <ul>
                     <li>
+                        <a href="/barba_test.html">
+                            Map
+                           </a>
+                    </li>
+                    <li>
                         <a href="#">
         Filter
        </a>
@@ -299,6 +304,9 @@
         -->
             </div>
             <!-- End of grid items-->
+
+            <!-- THIS WILL BE CHANGED BETWEEN PAGES-->
+
             <main id="swup" class="transition-fade">
 
                 <a href="/barba_test.html">Link</a>
@@ -341,11 +349,5 @@
 </div>
 <!-- close barba wrapper-->
 </body>
-
-<footer>
-
-
-
-</footer>
 
 </html>
