fix drop down menu overlay bug

--- a/barba_test.html
+++ b/barba_test.html
@@ -67,7 +67,9 @@
     <header class="clearfix">
         <!-- KEEP HEADER BETWEEN PAGES -->
 
-
+        <a href="/output.html">
+            Map
+           </a>
         <!--
 
         <span>
@@ -95,9 +97,7 @@
 
         <!-- FILTER / SORT DROP MENUS-->
         <div class="main">
-            <a href="/index.html">
-                Map
-               </a>
+
 
             <nav class="cbp-hrmenu" id="cbp-hrmenu">
                 <ul>
