--- a/index.html
+++ b/index.html
@@ -67,7 +67,11 @@
     <header class="clearfix">
         <!-- KEEP HEADER BETWEEN PAGES -->
 
-
+        <li>
+            <a href="/barba_test.html">
+                Map
+               </a>
+        </li>
         <!--
 
         <span>
@@ -97,11 +101,7 @@
         <div class="main">
             <nav class="cbp-hrmenu" id="cbp-hrmenu">
                 <ul>
-                    <li>
-                        <a href="/barba_test.html">
-                            Map
-                           </a>
-                    </li>
+
                     <li>
                         <a href="#">
         Filter
@@ -294,27 +294,18 @@
             </header>
             <!-- END Of filter drop down menus-->
 
-
-            <!-- Start of grid items-->
-            <div class="grid">
-
-                <!-- THIS WILL BE REPLACED WITH INSERTED-->
-                <!--  
-        <div data-includeHTML="bld_img_atr.html"></div>
-        -->
-            </div>
-            <!-- End of grid items-->
-
             <!-- THIS WILL BE CHANGED BETWEEN PAGES-->
-
             <main id="swup" class="transition-fade">
+                <!-- Start of grid items-->
+                <div class="grid">
 
-                <a href="/barba_test.html">Link</a>
-                <h2>TEST TEST WHOP WHOP</h2>
+                    <!-- THIS WILL BE REPLACED WITH INSERTED-->
 
+                </div>
+                <!-- End of grid items-->
 
             </main>
-
+            <!-- End of: THIS WILL BE CHANGED BETWEEN PAGES-->
 
 
 
